--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
       <!-- ABOUT -->
       <section id="about" class="about-area pb-100 pt-100">
-         <div class="container">
+         <div class="container container-sm container-md container-lg container-xl">
             <div class="row">
                <div class="col-md-12">
                   <div class="area-title">
@@ -149,7 +149,7 @@
       <!--Portfolio-->
       <!-- Portfolio Area Start Here -->
       <section class="portfolio-area  pt-100" id="portfolio">
-         <div class="container">
+         <div class="container container-sm container-md container-lg container-xl">
             <div class="row">
                <div class="col-lg-12">
                   <div class="area-title">
@@ -282,7 +282,7 @@
       </section>
       <!-- Portfolio Area End Here -->
       <section class="blog-area pb-100" id="blog">
-         <div class="container">
+         <div class="container container-sm container-md container-lg container-xl">
             <div class="row">
                <div class="col-lg-12">
                   <div class="area-title">
@@ -416,7 +416,7 @@
       <!-- Blog Area End Here -->
       <!-- Contact Area Start Here -->
       <section class="contact-area pb-100 mb-100" id="contact">
-         <div class="container">
+         <div class="container container-sm container-md container-lg container-xl">
             <div class="row">
                <div class="col-lg-12">
                   <div class="area-title">
@@ -442,7 +442,7 @@
       <!-- Contact Area End Here -->
       <!-- Footer Area Start Here -->
       <section class="footer-area pt-100 pb-100">
-         <div class="container">
+         <div class="container container-sm container-md container-lg container-xl">
             <div class="row">
                <div class="col-lg-12">
                   <h2>&nbsp; </h2>
